# JavaRush

./: .gitignore  README.md  requirements.txt
lesson-m4/01_FastAPI_Start/: pyproject.toml
lessons/: les2.py  les3.py  les4.py  les5-func.py  les7-tuple.py  les8-set-new.py  les8-str.py
lessons-m2/L32 Project-3/: requirements.txt
lessons-m2/les10/: index.html  step1.js  step1.py  step10.js  step11.js  step12.js  step13.js  step14.js  step15.js  step2.js  step3.js  step4.js  step5.js  step6.js  step7.js  step8.js  step9.js  step9.py
lessons-m2/les11/: step1.html  step10.html  step11.html  step2.html  step3.html  step4.html  step5.html  step6.html  step7.html  step8.html  step9.html
lessons-m2/les12/: drag.js  step1.html  step10.html  step11.html  step12.html  step13.html  step14.html  step15.html  step16.html  step2.html  step3.html  step4.html  step5.html  step6.html  step7.html  step8.html  step9.html
lessons-m2/les13/: step01.html  step01.js  step02.js  step03.js  step04.js  step05.js  step06.html  step06.js  step07-main.js  step07.html  step7-worker.js
lessons-m2/les15-dockerfile/: Dockerfile  Dockerfile-pip  app.py  pyproject.toml  (+1 more)
lessons-m3/les_21_DRF_ViewSet/: pyproject.toml
lessons-m3/les_21_DRF_ViewSet/config/: urls.py
lessons-m3/les_21_DRF_ViewSet/habits/: api_ping.py  models.py
lessons-m3/les_21_DRF_ViewSet/habits/api/: views.py
lessons-m4/10_FastAPI_and_db/: movies.db  pyproject.toml  temp_session1.py  temp_session_crud_read.py
lessons-m4/10_FastAPI_and_db/routers/: main_routers.py  movie_routers.py
lessons-m4/10_FastAPI_and_db/schemas/: movie.py
lessons/les20-poetry-pathlib/: README.md  main.py  pyproject.toml
(+551 files in other folders)
