[project]
name = "les20-poetry-pathlib"
version = "0.1.1"
description = ""
authors = [
    {name = "Stanislav",email = "stanislav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "flask (>=3.0.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

